--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "fast-sort": "^3.4.1",
     "next": "14.2.5",
     "postcss": "8.4.41",
     "react": "18.3.1",
