--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.2.5",
     "fast-sort": "^3.4.1",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.1",
     "postcss": "8.4.41",
     "prisma": "^5.18.0",
     "react": "18.3.1",
