--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-email": "^3.0.0",
+    "resend": "^4.0.0",
     "tailwindcss": "3.4.10",
     "typescript": "5.5.4",
     "zod": "^3.23.8"
